--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,21 @@
         "/home/shuo/gpir_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages",
         "/home/shuo/CARLA_0.9.11/PythonAPI/carla/dist/carla-0.9.11-py3.7-linux-x86_64.egg"
-    ]
+    ],
+    "python.analysis.extraPaths": [
+        "/home/shuo/carla_ws/devel/lib/python3/dist-packages",
+        "/home/shuo/gpir_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "/home/shuo/CARLA_0.9.11/PythonAPI/carla/dist/carla-0.9.11-py3.7-linux-x86_64.egg"
+    ],
+    "files.associations": {
+        "*.tcc": "cpp",
+        "fft": "cpp",
+        "nonlinearoptimization": "cpp",
+        "regex": "cpp",
+        "*.ipp": "cpp",
+        "string_view": "cpp",
+        "deque": "cpp",
+        "vector": "cpp"
+    }
 }
